--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,14 @@
 # of appearance. Changing the order has an impact on the overall integration
 # process, which may cause wedges in the gate later.
 
-dnspython>=1.9.4
-eventlet>=0.16.1,!=0.17.0
+dnspython>=1.14.0  # http://www.dnspython.org/LICENSE
+eventlet>=0.17.4  # MIT
 greenlet>=0.3.1
 netifaces>=0.5,!=0.10.0,!=0.10.1
 pastedeploy>=1.3.3
-simplejson>=2.0.9
+six>=1.9.0
 xattr>=0.4
-PyECLib==1.0.7                           # BSD
+PyECLib>=1.2.0                          # BSD
 
 # gluster-swift specific requirements
 prettytable     # needed by gswauth
